Adicionar rota de health no Swagger
